--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Clase de eventos</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
 	<input type="text" id="mi-input" name="mi-input">
 </p>
 </div>
-	<script type="text/javascript" src="assets/js/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
