funciones listas en js

--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Clase de eventos</title>
 </head>
-<body>
-<nav id="menu-principal">
-	<ul>
-		<li><a href="#" title="Lorum ipsum dolor sit amet">Home</a></li>
-		<li><a href="#" title="Aliquam tincidunt mauris eu risus">Shop</a></li>
-		<li><a href="#" title="Morbi in sem quis dui placerat ornare">About</a></li>
-		<li><a href="#" title="Praesent dapibus, neque id cursus faucibus">Contact</a></li>
-	</ul>
-</nav>
-<div>
-	<p>
-	<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam iure rem quam odit autem voluptate fugiat doloribus a placeat numquam explicabo tenetur illum, quidem sapiente itaque veritatis totam expedita facere.</span>
-	<label for="mi-input">Mi INPUT</label>
-	<input type="text" id="mi-input" name="mi-input">
-</p>
-</div>
+<body onload="recargaHome()">
+	<input onmouseout="botonUno()" name="elementoUno" placeholder="uno">
+	<input onmouseover="botonDos()" name="elementoDos" placeholder="dos">
+	<button id="boton">Enviar</button>
+
+
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
